--- a/css/style.css
+++ b/css/style.css
@@ -356,6 +356,58 @@ h6 {
   padding: 0.625rem 0.9375rem;
 }
 
+.map {
+  width: 100%;
+  height: 404px;
+  background-color: #333;
+}
+
+[class*=copyrights-pane] {
+  display: none !important;
+}
+
+.balloon__address {
+  color: yellow;
+}
+
+.balloon a {
+  color: red;
+}
+
+[class*=balloon__close-button] {
+  opacity: 1;
+}
+
+.ballon__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 290px;
+  padding: 5px;
+  gap: 19px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.ballon__body-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.ballon__body-left img {
+  width: 100px;
+  height: 75px;
+}
+
 [class*=-ibg] {
   position: relative;
 }
