--- a/css/style.css
+++ b/css/style.css
@@ -675,7 +675,7 @@ h6 {
 
 @supports not (padding-top: clamp( 6.25rem , 5.7134146341rem  +  2.6829268293vw , 7.625rem )) {
   .fullpage__body {
-    padding-top: calc(6.25rem + 1.375 * (100vw - 20rem) / 51.25);
+    padding-top: calc(6.25rem + 1.375 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -687,7 +687,7 @@ h6 {
 
 @supports not (padding-bottom: clamp( 18.75rem , 15.0426829268rem  +  18.5365853659vw , 28.25rem )) {
   .fullpage__body {
-    padding-bottom: calc(18.75rem + 9.5 * (100vw - 20rem) / 51.25);
+    padding-bottom: calc(18.75rem + 9.5 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -813,7 +813,7 @@ h6 {
 
 @supports not (font-size: clamp( 2.5rem , 1.9634146341rem  +  2.6829268293vw , 3.875rem )) {
   .fullpage-left h1 {
-    font-size: calc(2.5rem + 1.375 * (100vw - 20rem) / 51.25);
+    font-size: calc(2.5rem + 1.375 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -870,7 +870,7 @@ h6 {
 
 @supports not (padding-bottom: clamp( 1.875rem , 0.1676829268rem  +  8.5365853659vw , 6.25rem )) {
   .find__body {
-    padding-bottom: calc(1.875rem + 4.375 * (100vw - 20rem) / 51.25);
+    padding-bottom: calc(1.875rem + 4.375 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -1296,7 +1296,7 @@ h6 {
 
 @supports not (font-size: clamp( 2.5rem , 1.9634146341rem  +  2.6829268293vw , 3.875rem )) {
   .find__forms-tabs .title h2 {
-    font-size: calc(2.5rem + 1.375 * (100vw - 20rem) / 51.25);
+    font-size: calc(2.5rem + 1.375 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -1493,7 +1493,7 @@ input .select-container {
 
 @supports not (padding-top: clamp( 6.25rem , 5.7134146341rem  +  2.6829268293vw , 7.625rem )) {
   .depart__body {
-    padding-top: calc(6.25rem + 1.375 * (100vw - 20rem) / 51.25);
+    padding-top: calc(6.25rem + 1.375 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -1505,7 +1505,7 @@ input .select-container {
 
 @supports not (padding-bottom: clamp( 18.75rem , 15.0426829268rem  +  18.5365853659vw , 28.25rem )) {
   .depart__body {
-    padding-bottom: calc(18.75rem + 9.5 * (100vw - 20rem) / 51.25);
+    padding-bottom: calc(18.75rem + 9.5 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -1524,7 +1524,7 @@ input .select-container {
 
 @supports not (font-size: clamp( 2.5rem , 1.9634146341rem  +  2.6829268293vw , 3.875rem )) {
   .depart__body h1 {
-    font-size: calc(2.5rem + 1.375 * (100vw - 20rem) / 51.25);
+    font-size: calc(2.5rem + 1.375 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -1806,7 +1806,7 @@ input .select-container {
 
 @supports not (padding-top: clamp( 3.25rem , 3.0548780488rem  +  0.9756097561vw , 3.75rem )) {
   .laxterminal__body {
-    padding-top: calc(3.25rem + 0.5 * (100vw - 20rem) / 51.25);
+    padding-top: calc(3.25rem + 0.5 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -1818,7 +1818,7 @@ input .select-container {
 
 @supports not (padding-bottom: clamp( 3.25rem , 2.5182926829rem  +  3.6585365854vw , 5.125rem )) {
   .laxterminal__body {
-    padding-bottom: calc(3.25rem + 1.875 * (100vw - 20rem) / 51.25);
+    padding-bottom: calc(3.25rem + 1.875 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -1839,7 +1839,7 @@ input .select-container {
 
 @supports not (font-size: clamp( 1.25rem , 0.2256097561rem  +  5.1219512195vw , 3.875rem )) {
   .laxterminal__title h2 {
-    font-size: calc(1.25rem + 2.625 * (100vw - 20rem) / 51.25);
+    font-size: calc(1.25rem + 2.625 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -1862,7 +1862,7 @@ input .select-container {
 
 @supports not (padding-bottom: clamp( 2.5rem , 2.3048780488rem  +  0.9756097561vw , 3rem )) {
   .laxterminal__title p {
-    padding-bottom: calc(2.5rem + 0.5 * (100vw - 20rem) / 51.25);
+    padding-bottom: calc(2.5rem + 0.5 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -1924,7 +1924,7 @@ input .select-container {
 
 @supports not (padding-top: clamp( 3.75rem , 2.7743902439rem  +  4.8780487805vw , 6.25rem )) {
   .plantrip__body {
-    padding-top: calc(3.75rem + 2.5 * (100vw - 20rem) / 51.25);
+    padding-top: calc(3.75rem + 2.5 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -1936,7 +1936,7 @@ input .select-container {
 
 @supports not (padding-bottom: clamp( 3.75rem , 2.7743902439rem  +  4.8780487805vw , 6.25rem )) {
   .plantrip__body {
-    padding-bottom: calc(3.75rem + 2.5 * (100vw - 20rem) / 51.25);
+    padding-bottom: calc(3.75rem + 2.5 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -1954,7 +1954,7 @@ input .select-container {
 
 @supports not (font-size: clamp( 2.5rem , 1.9634146341rem  +  2.6829268293vw , 3.875rem )) {
   .plantrip__title h2 {
-    font-size: calc(2.5rem + 1.375 * (100vw - 20rem) / 51.25);
+    font-size: calc(2.5rem + 1.375 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -1979,7 +1979,7 @@ input .select-container {
 
 @supports not (padding-top: clamp( 2.5rem , 1.9146341463rem  +  2.9268292683vw , 4rem )) {
   .plan__card {
-    padding-top: calc(2.5rem + 1.5 * (100vw - 20rem) / 51.25);
+    padding-top: calc(2.5rem + 1.5 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -2042,7 +2042,7 @@ input .select-container {
 
 @supports not (height: clamp( 11.25rem , 7.8109756098rem  +  17.1951219512vw , 20.0625rem )) {
   .column__card-img img {
-    height: calc(11.25rem + 8.8125 * (100vw - 20rem) / 51.25);
+    height: calc(11.25rem + 8.8125 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -2054,7 +2054,7 @@ input .select-container {
 
 @supports not (padding-bottom: clamp( 3.75rem , 2.7743902439rem  +  4.8780487805vw , 6.25rem )) {
   .newsletter {
-    padding-bottom: calc(3.75rem + 2.5 * (100vw - 20rem) / 51.25);
+    padding-bottom: calc(3.75rem + 2.5 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -2082,7 +2082,7 @@ input .select-container {
 
 @supports not (font-size: clamp( 1.25rem , 0.9085365854rem  +  1.7073170732vw , 2.125rem )) {
   .newsletter__body h2 {
-    font-size: calc(1.25rem + 0.875 * (100vw - 20rem) / 51.25);
+    font-size: calc(1.25rem + 0.875 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -2121,7 +2121,7 @@ input .select-container {
 
 @supports not (padding-top: clamp( 1.5rem , 1.256097561rem  +  1.2195121951vw , 2.125rem )) {
   .newsletter-form .news__radio {
-    padding-top: calc(1.5rem + 0.625 * (100vw - 20rem) / 51.25);
+    padding-top: calc(1.5rem + 0.625 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -2208,7 +2208,7 @@ input .select-container {
 
 @supports not (padding-top: clamp( 2.5rem , 1.5243902439rem  +  4.8780487805vw , 5rem )) {
   .parkgarage__body {
-    padding-top: calc(2.5rem + 2.5 * (100vw - 20rem) / 51.25);
+    padding-top: calc(2.5rem + 2.5 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -2220,7 +2220,7 @@ input .select-container {
 
 @supports not (margin-bottom: clamp( 2.5rem , 0.5487804878rem  +  9.756097561vw , 7.5rem )) {
   .parkgarage__body {
-    margin-bottom: calc(2.5rem + 5 * (100vw - 20rem) / 51.25);
+    margin-bottom: calc(2.5rem + 5 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -2243,7 +2243,7 @@ input .select-container {
 
 @supports not (font-size: clamp( 1.375rem , 1.0823170732rem  +  1.4634146341vw , 2.125rem )) {
   .parkgarage__body .title {
-    font-size: calc(1.375rem + 0.75 * (100vw - 20rem) / 51.25);
+    font-size: calc(1.375rem + 0.75 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -2255,7 +2255,7 @@ input .select-container {
 
 @supports not (padding-bottom: clamp( 2.125rem , 1.3932926829rem  +  3.6585365854vw , 4rem )) {
   .parkgarage__body .title {
-    padding-bottom: calc(2.125rem + 1.875 * (100vw - 20rem) / 51.25);
+    padding-bottom: calc(2.125rem + 1.875 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -2435,7 +2435,7 @@ input .select-container {
 
 @supports not (padding-top: clamp( 3.75rem , 3.262195122rem  +  2.4390243902vw , 5rem )) {
   .works__body {
-    padding-top: calc(3.75rem + 1.25 * (100vw - 20rem) / 51.25);
+    padding-top: calc(3.75rem + 1.25 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -2447,7 +2447,7 @@ input .select-container {
 
 @supports not (padding-bottom: clamp( 3.75rem , 3.262195122rem  +  2.4390243902vw , 5rem )) {
   .works__body {
-    padding-bottom: calc(3.75rem + 1.25 * (100vw - 20rem) / 51.25);
+    padding-bottom: calc(3.75rem + 1.25 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -2550,7 +2550,7 @@ input .select-container {
 
 @supports not (padding-top: clamp( 3.75rem , 3.262195122rem  +  2.4390243902vw , 5rem )) {
   .customers__body {
-    padding-top: calc(3.75rem + 1.25 * (100vw - 20rem) / 51.25);
+    padding-top: calc(3.75rem + 1.25 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -2562,7 +2562,7 @@ input .select-container {
 
 @supports not (padding-bottom: clamp( 5.875rem , 4.9237804878rem  +  4.756097561vw , 8.3125rem )) {
   .customers__body {
-    padding-bottom: calc(5.875rem + 2.4375 * (100vw - 20rem) / 51.25);
+    padding-bottom: calc(5.875rem + 2.4375 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -2583,7 +2583,7 @@ input .select-container {
 
 @supports not (padding-bottom: clamp( 1.5rem , 1.1097560976rem  +  1.9512195122vw , 2.5rem )) {
   .customers__body .title {
-    padding-bottom: calc(1.5rem + 1 * (100vw - 20rem) / 51.25);
+    padding-bottom: calc(1.5rem + 1 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -2601,7 +2601,7 @@ input .select-container {
 
 @supports not (font-size: clamp( 1.375rem , 1.1067073171rem  +  1.3414634146vw , 2.0625rem )) {
   .customers__body .title h2 {
-    font-size: calc(1.375rem + 0.6875 * (100vw - 20rem) / 51.25);
+    font-size: calc(1.375rem + 0.6875 * ($maxWidth - 20rem) / 51.25);
   }
 }
 
@@ -2621,7 +2621,7 @@ input .select-container {
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 16px 24px;
-  max-width: 350px;
+  width: 350px;
   margin-right: 25px;
   margin-bottom: 20px;
 }
